CHANGE now produces xml instead of json

--- a/breakfast-service/1.0-UNPUBLISHED.yml
+++ b/breakfast-service/1.0-UNPUBLISHED.yml
@@ -16,7 +16,7 @@ paths:
       description: Creates a new breakfast entity
       operationId: createBreakfast
       produces:
-      - application/json
+      - application/xml
       consumes:
       - application/json
       parameters:
